# img-db

./: .coveragerc  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python.yml  release.yml  tests.yml
cli/: __init__.py  add.py  db.py  del.py  gallery.py  info.py  links.py  rename.py
docs/: filter.md  hashes.md  readme.md
imgdb/: __init__.py  __main__.py  ai.py  algorithm.py  chart.py  config.py  db.py  dhash.py  fsys.py  gallery.py  img.py  link.py  log.py  main.py  naming.py  util.py  vhash.py
imgdb/exifpy/: __init__.py  cli.py  core.py  tags.py
imgdb/server/: README.md  run.py
imgdb/server/static/: gallery.js  sortWorker.js
imgdb/server/views/: base.html  gallery.html  index.html
imgdb/tmpl/: base.html  crlf_gallery.html  gallery.js  gallery.ts  img_colors.html  img_details.html  img_gallery.html  img_table.html  img_table_algo.html  img_table_vhash.html  view_img.html
test/: conftest.py  expect.toml  requirements.txt  server.test.ts  test_add.py  test_add_del.py  test_algorithm.py  test_cli.py  test_config.py  test_db.py  test_expect.py  test_gallery.py  test_img.py  test_links.py  test_parse_filter.py  test_rename.py  test_server.py  test_util.py  test_vhash.py
test/fixtures/: broken-db1.htm  broken-db2.htm  broken-db3.htm  broken-db4.htm  broken-db5.htm  test-db.htm
