[tool.poetry]
name = "img-db"
version = "0.1.0"
description = "img-DB is a CLI application for organizing your images"
authors = ["Cristi Constantin"]
license = "MIT"

packages = [
    { include = "imgdb" },
]
exclude = ["notebook"]

repository = "https://github.com/croqaz/img-db"
homepage = "https://github.com/croqaz/img-db"

keywords = ["image", "photo", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics"
]

[tool.poetry.scripts]
imgdb = 'imgdb.__main__:main'


[tool.poetry.dependencies]
python = ">=3.9,<3.11"

Pillow = "9.2.0"
pyyaml = "6.0"
beautifulsoup4 = "4.11.1"
lxml = "4.9.1"
ujson = "5.5.0"
fire = "0.4.0"
attrs = "22.1.0"
numpy = "1.23.4"
scipy = "1.9.3"
ipython = "8.5.0"
tqdm = "4.64.0"
Jinja2 = "3.1.1"
texttable = "1.6.4"
PyExifTool = "0.5.4"
blurhash-python = "1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
pytest-cov = "3.0.x"
codecov = "2.1.x"
mypy = "0.971"
black = "22.8.0"
pyproject-flake8 = "5.0.4.post1"
Flake8-pyproject = "1.1.0.post0"


[tool.flake8]
max-line-length = 120
max-complexity = 22
per-file-ignores = [
    "imgdb/__init__.py: F40",
    "test/*.py: F40,E501",
]
extend-ignore = [
    "E731"  # do not assign a lambda expression
]
extend-exclude = [
    "*.egg-info",
    "dist",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
files = "imgdb"

[tool.black]
target-version = ['py39']
line-length = 120
skip-string-normalization = true

[tool.coverage.report]
ignore_errors = true
omit = [
     "imgdb/chart.py"
]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if __name__ == __main__:",
    "pragma: no cover",
    "raise ModuleNotFoundError.+",
    "raise NotImplementedError.+",
    "warnings\\.warn.+",
]
