[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 120
max-complexity = 15
ignore =
    # E731 do not assign a lambda expression
    E731,
    # F811 redefinition of unused
    F811,
exclude =
    __pycache__,
    .cache,
    .eggs,
    .git,
    .tox,
    *.egg-info,
    *.pyc,
    build,
    dist,
